--- a/src/css/_marker.scss
+++ b/src/css/_marker.scss
@@ -139,7 +139,6 @@
 }
 
 .leaflet-popup-content {
-  min-width: max-content;
   margin: 0;
 
   @include media-breakpoint-up(lg) {
